Fixed spacing and extra main issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ header h2 {
 .container {
   padding-left: 0.5em;
   padding-right: 0.5em;
-  margin-right: 1rem;
 }
 
 .lead {
